Number Events Finished

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700|Saira:300,400,500,700" rel="stylesheet">
-    <!-- Add the slick-theme.css if you want default styling -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.css" />
-    <!-- Add the slick-theme.css if you want default styling -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/main.css">
     <title>DJ-Tiestos</title>
 </head>
@@ -32,11 +28,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav text-center">
-                        <a class="nav-item nav-link active" href="wp-festival.html">WP Festival</a>
-                        <a class="nav-item nav-link" href="djs.html">DJS</a>
-                        <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
-                        <a class="nav-item nav-link" href="blog.html">Blog</a>
-                        <a class="nav-item nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-item nav-link active" href="#">WP Festival <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">DJS</a>
+                        <a class="nav-item nav-link" href="#">Presentaciones</a>
+                        <a class="nav-item nav-link" href="#">Blog</a>
+                        <a class="nav-item nav-link" href="#">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -63,80 +59,80 @@
     </header>
     <!--Header-->
     <main class="main">
-        <section class="presentations sectionBorder sectionBorder--bottom">
+        <section class="presentations sectionBorder">
             <article class="container">
                 <h2 class="title title--white">Presentaciones</h2>
                 <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de
                     comprar tickets</p>
                 <div class="presentations__details row mt-5">
-                    <div class="presentations__details--title col col-md-2">Hora</div>
-                    <div class="presentations__details--title col col-md-2">DJ</div>
-                    <div class="presentations__details--title col col-md-3 d-none d-lg-block"></div>
-                    <div class="presentations__details--title col col-md-2 d-none d-lg-block">Escenario</div>
-                    <div class="presentations__details--title col col-md-3">Ticket</div>
+                    <div class="presentations__details--title col">Hora</div>
+                    <div class="presentations__details--title col">DJ</div>
+                    <div class="presentations__details--title col d-none d-lg-block"></div>
+                    <div class="presentations__details--title col d-none d-lg-block">Escenario</div>
+                    <div class="presentations__details--title col mr-3">Ticket</div>
                 </div>
                 <!--Titulo de las presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col col-md-2">22:00</div>
-                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
-                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="130"
-                            height="144">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Monza</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="150"
+                            height="164">
                     </div>
-                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col col-md-3 d-flex">
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
                         <a class="btn btn-primary  mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div>
                 <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col col-md-2">23:00</div>
-                    <div class="presentations__details--information col col-md-2">Kura</div>
-                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="130" height="144">
+                    <div class="presentations__details--information col">23:00</div>
+                    <div class="presentations__details--information col">Kura</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="150" height="164">
                     </div>
-                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col col-md-3 d-flex ">
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div>
                 <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col col-md-2">22:00</div>
-                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
-                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="130" height="144">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Monza</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="150" height="164">
                     </div>
-                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col col-md-3 d-flex ">
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div>
                 <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col col-md-2">22:00</div>
-                    <div class="presentations__details--information col col-md-2">Dj Torino</div>
-                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="130" height="144">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Torino</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="150" height="164">
                     </div>
-                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col col-md-3 d-flex ">
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div>
                 <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col col-md-2">22:00</div>
-                    <div class="presentations__details--information col col-md-2">Dj Yan</div>
-                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="130" height="144">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Yan</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="150" height="164">
                     </div>
-                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col col-md-3 d-flex ">
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
@@ -146,21 +142,49 @@
                     <a class="btn btn-primary btn-lg" href="#" id="">Ver Todas</a>
                 </div>
             </article>
-        </section>
-        <!--End Presentaciones-->
+        </section> <!--End Presentaciones-->
+        <section class="numberEvents d-none d-lg-block">
+            <div class="container">
+                <article class="row justify-content-between align-items-center">
+                    <div class="numberEvents__item">
+                        <img src="img/icon_lights.png" alt="2000 Luces Increibles">
+                        <h6>2000</h6>
+                        <h5>Luces Increibles</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_djs.png" alt="12 Djs Top Mundial">
+                        <h6>12</h6>
+                        <h5>Djs Top Mundial</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_music_hours.png" alt="1000 Horas de Música">
+                        <h6>1000</h6>
+                        <h5>Horas de Música</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_assistens.png" alt="10000 Asistentes">
+                        <h6>10000</h6>
+                        <h5>Asistentes</h5>
+                    </div>
+                </article>
+            </div>
+        </section> <!--End Presentaciones-->
     </main>
-    <!-- Scripts -->
+
+
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
     <script>
-        $(document).ready(function(){
-            $('.js-custom-toggler').click(function(){
-                // $('.js-navbar').toggleClass('relative');
-                $('.js-collapse').addClass('navbar--absolute');
-            })
-        })
+        $(document).ready(function () {
+            $('[data-target="#navbarNavAltMarkup"]').click(function () {
+
+                $('.navbar-expand-lg').toggleClass('relative');
+                $('.collapse').addClass('navbar-absolute');
+            });
+        });
     </script>
 </body>
+
 </html>
