Seccion Galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -357,6 +357,71 @@
                 </div>
             </div>
         </section> <!--End Sponsors-->
+        <section class="gallery">
+            <header class="container sectionBorder--top">
+                <h2 class="title title--black">Galeria de imagenes</h2>
+                <p>Fotografias evento del año anterior Medellín 2017</p>
+            </header>
+            <article class="container-fluid">
+                <div class="row mt-5">
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_brasil.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_colombia.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_fabricio.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_dj.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_francia.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_tomorroland.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <!--End Gallery-->
     </main>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
