--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 </div>
             </div>
         </section> <!--End Sponsors-->
-        <section class="gallery">
+        <section class="gallery pb-0">
             <header class="container sectionBorder--top">
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
@@ -420,8 +420,42 @@
                     </div>
                 </div>
             </article>
+        </section><!--End Gallery-->
+        <section class="news d-none d-md-block">
+            <div class="container">
+                <h2 class="title title--white title--small text-md-right">Noticias</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <article class="news__item">
+                            <figure>
+                                <a href="#"><img class="img-fluid" src="img/news_brasil.png" alt=""></a>
+                                <figcaption><span>Categoría</span> - <span>Sep 5</span></figcaption>
+                            </figure>
+                            <h2><a href="#">Disponible la primera preventa</a></h2>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                        </article>
+                    </div>
+                    <div class="col-5 offset-1 news__right">
+                        <article class="news__item">
+                            <figure>
+                                <a href="#"><img class="img-fluid" src="img/news_colombia.png" alt=""></a>
+                                <figcaption><span>Categoría</span> - <span>Sep 5</span></figcaption>
+                            </figure>
+                            <h2><a href="#">Disponible la primera preventa</a></h2>                            
+                        </article>
+                        <article class="news__item">
+                            <figure>
+                                <a href="#"><img class="img-fluid" src="img/news_alexio.png" alt=""></a>
+                                <figcaption><span>Categoría</span> - <span>Sep 5</span></figcaption>
+                            </figure>
+                            <h2><a href="#">Disponible la primera preventa</a></h2>
+                        
+                        </article>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!--End Gallery-->
     </main>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
