Footer final verion home

--- a/index.html
+++ b/index.html
@@ -455,8 +455,40 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </section><!--End News-->
+    </main> <!--Main-->
+    <footer class="footer">
+        <div class="container-fluid pl-0 pr-0">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="d-flex flex-column justify-content-center footer__information text-center text-lg-left">
+                        <h5>WP FESTIVAL MUSIC - Bogotá</h5>
+                        <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                            tempor invidunt ut labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                        <ul class="list-unstyled d-flex justify-content-center justify-content-lg-start mt-5">
+                            <li class="mr-4"><a href=""><img src="img/icon_twitter.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_facebook.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_instagram.png" alt=""></a></li>
+                        </ul>
+                        <nav class="footer__nav">
+                            <ul class="list-unstyled  d-flex justify-content-center justify-content-lg-start">
+                                <li class="mr-3"><a href="#">WP FESTIVAL</a></li>
+                                <li class="mr-3"><a href="#">DJS</a></li>
+                                <li class="mr-3"><a href="#">Presentaciones</a></li>
+                                <li class="mr-3"><a href="#">Blog</a></li>
+                                <li class="mr-3"><a href="#">Contacto</a></li>
+                            </ul>
+                        </nav>
+                        </div>
+                    </div>
+                    
+                <div class="col-lg-6 d-none d-lg-block">
+                    <img src="img/mapa.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
