--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                 </div> <!--Descripción presentaciones-->
                 <div class="row justify-content-center mt-5">
-                    <a class="btn btn-primary btn-lg" href="#" id="">Ver Todas</a>
+                    <a class="btn btn-primary btn-lg" href="djs.html" id="">Ver Todas</a>
                 </div>
             </article>
         </section> <!--End Presentaciones-->
