Add page details Blog

--- a/blog.html
+++ b/blog.html
@@ -81,11 +81,11 @@
                     <div class="col col-md-11 blog__content">
                            <header class="blog__header">
                                <figure class="m-0">
-                                    <a href="#">
+                                    <a href="details-blog.html" class="blog__link">
                                         <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                     </a>
                                </figure>
-                               <h3 class="text-center text-md-left blog__title"><a href="#">Confirmados los mejores Djs del mundo</a></h3>
+                               <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
                                <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
                            </header>
                            <p>
@@ -119,11 +119,11 @@
                     <div class="col col-md-11 blog__content">
                         <header class="blog__header">
                             <figure class="m-0">
-                                <a href="#" class="blog__link">
+                                <a href="details-blog.html" class="blog__link">
                                     <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                 </a>
                             </figure>
-                            <h3 class="text-center text-md-left blog__title"><a href="#">Confirmados los mejores Djs del mundo</a></h3>
+                            <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
                             <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
                         </header>
                         <p>
@@ -161,11 +161,11 @@
                     <div class="col col-md-11 blog__content">
                         <header class="blog__header">
                             <figure class="m-0">
-                                <a href="#" class="blog__link">
+                                <a href="details-blog.html" class="blog__link">
                                     <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                 </a>
                             </figure>
-                            <h3 class="text-center text-md-left blog__title"><a href="#">Confirmados los mejores Djs del mundo</a></h3>
+                            <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
                             <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
                         </header>
                         <p>
@@ -203,11 +203,11 @@
                     <div class="col col-md-11 blog__content">
                         <header class="blog__header">
                             <figure class="m-0">
-                                <a href="#" class="blog__link">
+                                <a href="details-blog.html" class="blog__link">
                                     <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                 </a>
                             </figure>
-                            <h3 class="text-center text-md-left blog__title"><a href="#">Confirmados los mejores Djs del mundo</a></h3>
+                            <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
                             <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
                         </header>
                         <p>
@@ -245,11 +245,11 @@
                     <div class="col col-md-11 blog__content">
                         <header class="blog__header">
                             <figure class="m-0">
-                                <a href="#" class="blog__link">
+                                <a href="details-blog.html" class="blog__link">
                                     <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                 </a>
                             </figure>
-                            <h3 class="text-center text-md-left blog__title"><a href="#">Confirmados los mejores Djs del mundo</a></h3>
+                            <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
                             <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
                         </header>
                         <p>
